updates all services lists for accuracy. fix crypto icon on home. fix navbar logo spacing on mobile

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -5,6 +5,9 @@
   align-items: center;
   height: 80px;
   padding: 0px 50px;
+  @media (max-width:$tablet) {
+    padding: 0px 25px;
+  }
   width: 100%;
   border-bottom: 2px solid $od-cream-dark;
   &__Brand {
